--- a/_layouts/partita_22_23.html
+++ b/_layouts/partita_22_23.html
@@ -2,11 +2,11 @@
 layout: page
 ---
 
-<a href=".">Riepilogo</a>
+<a href="..">Riepilogo</a>
 
 {% for item in site.data.stagione_2022_2023.giornata_1 %}
     ||
-    <a href="partite/{{ item.id }}">
+    <a href="{{ item.id }}">
         {{ item.home }} ({{ item.score }}) {{ item.away }}
     </a>
 {% endfor %}
