Aggiunti link per dashboard grafana

--- a/_layouts/stagione.html
+++ b/_layouts/stagione.html
@@ -5,6 +5,6 @@ layout: page
 <ul>
     <li><a href="mercati">Mercati</a></li>
     <li><a href="calendario">Calendario e risultati</a></li>
-    <li><a href="calendario-coppa">Coppa</a></li>
+    <li><a href="calendario-coppa">Coppa Box</a></li>
     <li><a href="pronostici">Pronostici</a></li>
 </ul>
