--- a/_layouts/stagione.html
+++ b/_layouts/stagione.html
@@ -4,7 +4,7 @@ layout: page
 
 <ul>
     <li><a href="mercati">Mercati</a></li>
-    <li><a href="calendario">Calendario e risultati</a></li>
-    <li><a href="calendario-coppa">Coppa Box</a></li>
+    <li><a href="calendario">Campionato: calendario e risultati</a></li>
+    <li><a href="calendario-coppa">Coppa Box:  calendario e risultati</a></li>
     <li><a href="pronostici">Pronostici</a></li>
 </ul>
