--- a/_layouts/stagione.html
+++ b/_layouts/stagione.html
@@ -6,5 +6,5 @@ layout: page
     <li><a href="mercati">Mercati</a></li>
     <li><a href="calendario">Campionato: calendario e risultati</a></li>
     <li><a href="calendario-coppa">Coppa Box:  calendario e risultati</a></li>
-    <li><a href="pronostici">Pronostici</a></li>
+    <li><a href="pronostici/pronostici.html">Pronostici</a></li>
 </ul>
