compute summary chart from all the inputs

--- a/python/templates/pronostici_summary.html
+++ b/python/templates/pronostici_summary.html
@@ -10,6 +10,15 @@ permalink: {{ permalink }}
 {% endfor %}
 </div>
 
+<h1>La classifica statistica secondo i pronostici</h1>
+<ol>
+    {% for fantasquadra in classifica %}
+        <li>{{ fantasquadra }}</li>
+    {% endfor %}
+</ol>
+
+<h1>Grafico dei pronostici</h1>
+<p>Bello ma illeggibile...</p>
 <div>
 {{ svg }}
 </div>
