plot all predictions with heatmap

--- a/python/templates/pronostici_summary.html
+++ b/python/templates/pronostici_summary.html
@@ -17,8 +17,8 @@ permalink: {{ permalink }}
     {% endfor %}
 </ol>
 
-<h1>Grafico dei pronostici</h1>
-<p>Bello ma illeggibile...</p>
+<h1>Heatmap dei pronostici</h1>
+<p>Bello e leggibile ❤️</p>
 <div>
 {{ svg }}
 </div>
